@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sirilpy"
-version = "0.8.8"
+version = "0.8.11"
 authors = [
   { name = "Team free-astro" },
 ]
